# MacTag2Dropbox

./: README.md  environment.yml  process_tags.py  process_tags.spec  pyproject.toml
